2001-12-01  Philippe Elie  <ph_e@club-internet.fr>

	* Makefile.in: build util sub-dir first

	* dae/opd_util.h:
	* dae/opd_util.c: move opd_GetContext() ...
	* util/opd_popt.h:
	* util/opd_popt.c: in these new files

	* pp/oprofpp.cpp:
	* pp/opf_filter.cpp:
	* pp/op_time.cpp:
	* dae/oprofiled.c: free the poptContext + cleanup popt

	* events/op_help.c:
	* events/Makefile.in: use the popt library

	* pp/oprofpp.cpp: allow to use --output-linenr-info with
	  --list-symbols.
	* doc/oprofile.1.in:
	* doc/oprofile.sgml: reflect it

2001-12-01  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c:
	* dae/opd_util.c:
	* dae/opd_util.h:
	* dae/oprofiled.c: backup if needed old samples files
	  in a separate directory

	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: cleanup + minor buglet fix

	* util/file_manip.h:
	* util/file_manip.cpp: create_file_list() new to create
	  a list of all the file in a directory

	* pp/op_time.cpp: new utility
	* pp/Makefile.in: handle op_time

	* doc/oprofile.sgml: 
	* doc/oprofile.1.in: Document op_time

2001-11-30  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in: cvs add Rules.make.in.

2001-11-30  Dave Jones <davej@suse.de>

	* configure.in: suppress reference to an inexistant
	  Rules.make.in

2001-11-29  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp_util.cpp: do not remove leading underscore to
	  avoid C++ demangling failure

2001-11-27  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in:
	* pp/Makefile.in: work-around for gcc 3.0 and bfd pre-1998

	* doc/oprofile.sgml: typo

2001-11-26  Philippe Elie  <ph_e@club-internet.fr>

	* Rules.make.in: new to add autodeps and share commons
	  definitions
	* all Makefile.in except module, gui: use autodeps

	* doc/oprofile.1.in: typo

	* util/filemanip.h: missing std::

2001-11-25  Philippe Elie  <ph_e@club-internet.fr>

	* oprofile-tests/understanding/persistent.cpp: new
	* util/persistent.h: new. An attempt to provide a better